--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <a href='./index.html'><span>Home</span></a>
                 <a href='web/about.html'><span>About</span></a>
                 <a href='web/hobbies.html'><span>Hobbies</span></a>
+                <a href='https://hust3608.github.io/'><span>3608</span></a>
             </div>
 
         </div>
