--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
                 <a href='./index.html'><span>Home</span></a>
                 <a href='web/about.html'><span>About</span></a>
                 <a href='web/hobbies.html'><span>Hobbies</span></a>
+            </div>
+ <div class='ribbon'>
                 <a href='https://hust3608.github.io/'><span>3608</span></a>
             </div>
-
         </div>
         <div class="icons">
             <div class="icons_items">
