--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
     <div align="center">
      <bgcolor="#FD1115"><strong style="font-size: 36px">
-         <a href =https://hust3608.github.io/">
+         <a href =https://hust3608.github.io/">寝室主页</a>
     </div>
 </body>
 <!-- <script>
