--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <a href='./index.html'><span>Home</span></a>
                 <a href='web/about.html'><span>About</span></a>
                 <a href='web/hobbies.html'><span>Hobbies</span></a>
+                <a href='https://hust3608.github.io/'><span>3608</span></a>
             </div>
         </div>
         <div class="icons">
@@ -69,11 +70,7 @@
                
         </audio>
         <img class="music_img" src="./img/music.png" alt=""> -->
-    </div>
-    <div align="center">
-     <bgcolor="#FD1115"><strong style="font-size: 36px">
-         <a href =https://hust3608.github.io/">寝室主页</a>
-    </div>
+    
 </body>
 <!-- <script>
     let mucics = document.getElementById('audio')
